argocd/snipeit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snipeit
  namespace: snipeit
  labels:
    app: snipeit
spec:
  selector:
    matchLabels:
      app: snipeit
  template:
    metadata:
      labels:
        app: snipeit
    spec:
      containers:
      - name: snipeit
        image: snipe/snipe-it:v7.1.16
        ports:
        - containerPort: 80
