argocd/snipeit/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: snipeit-svc
  namespace: snipeit
spec:
  selector:    
    app: snipeit
  type: ClusterIP
  ports:  
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
